<resources>
    <string name="app_name">My Application</string>
    <string name="file_system">文件系统目录</string>
    <string name="keyboard_demo">自定义键盘</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="safe_keyboard">智能加密安全软键盘</string>
    <string name="done">完成</string>
    <string name="keyboard_key1">"&#64;"</string>
    <string name="keyboard_key2">"&#38;"</string>
    <string name="keyboard_key3">\"</string>
    <string name="keyboard_key4">"&#60;"</string>
    <string name="keyboard_key5">"&#62;"</string>
    <string name="keyboard_demo_new">"安全软键盘"</string>
    <string name="keyboard_system">"系统键盘"</string>
    <string name="keyboard_battery">"电池信息"</string>
    <string name="add_bottom">加载BottomView</string>
    <string name="language_setting">语言设置</string>
    <string name="relative_test">RelativeLayout 测试</string>
    <string name="circleimagetest">CircleImageTest</string>
</resources>
