<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <TextView
            android:id="@+id/internalMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:text="Hello World!" />

        <TextView
            android:id="@+id/externalMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:text="Hello World!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/MarginLeftButtonStyle"
                android:onClick="onFileClick"
                android:text="@string/file_system" />

            <Button
                style="@style/MarginRightButtonStyle"
                android:onClick="onKeyBoardClick"
                android:text="@string/keyboard_demo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/MarginLeftButtonStyle"
                android:onClick="onSafeKeyBoardClick"
                android:text="@string/keyboard_demo_new" />

            <Button
                style="@style/MarginRightButtonStyle"
                android:onClick="onSafeKeyBatteryClick"
                android:text="@string/keyboard_battery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/MarginLeftButtonStyle"
                android:onClick="onBottomAdd"
                android:text="@string/add_bottom" />

            <Button
                style="@style/MarginRightButtonStyle"
                android:onClick="onShutDownClick"
                android:text="@string/language_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/MarginLeftButtonStyle"
                android:onClick="onRelativeClick"
                android:text="@string/relative_test" />

            <Button
                style="@style/MarginRightButtonStyle"
                android:onClick="onCircleImageClick"
                android:text="@string/circleimagetest" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

